--- a/css/main.css
+++ b/css/main.css
@@ -235,7 +235,7 @@ flex-direction: column;
 }
 .schedual-text{
     font-size: 30px;
-    color: white;
+    color: #ffffff;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 
 }
