--- a/css/welcom.css
+++ b/css/welcom.css
@@ -33,24 +33,20 @@ body{
     align-items: center;
     padding: 0px 15px;
     flex-direction: column;
-    gap: 10px;
+    gap: 20px;
 
 }
 .text1{
     font-size: 40px;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
      font-weight: 500px;
-     text-align: center;
      /* background-color: rgba(188, 169, 98, 0.244); */
 }
 .text2{
     color: gray;
     font-size: 20px;
 }
-.text3{
-    color: rgb(0, 0, 0);
-    font-size: 20px;
-    font-weight: bold;
-    font-size: 25px;
-}
-
+#myVideo{
+    width: 170%;
+    height: 120%;
+ }
