--- a/css/welcom.css
+++ b/css/welcom.css
@@ -33,20 +33,21 @@ body{
     align-items: center;
     padding: 0px 15px;
     flex-direction: column;
-    gap: 20px;
+    gap: 10px;
 
 }
 .text1{
     font-size: 40px;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
      font-weight: 500px;
+     text-align: center;
      /* background-color: rgba(188, 169, 98, 0.244); */
 }
 .text2{
     color: gray;
-    font-size: 10px;
+    font-size: 20px;
 }
 #myVideo{
     width: 800px;
-    height: 100%;
+    height: 120%;
  }
