--- a/css/welcom.css
+++ b/css/welcom.css
@@ -47,6 +47,11 @@ body{
     color: gray;
     font-size: 20px;
 }
+.text3{
+    color: rgb(0, 0, 0);
+    font-size: 20px;
+    font-weight: 500;
+}
 #myVideo{
     width: 800px;
     height: 120%;
