--- a/css/welcom.css
+++ b/css/welcom.css
@@ -37,7 +37,7 @@ body{
 
 }
 .text1{
-    font-size: 40px;
+    font-size: 30px;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
      font-weight: 500px;
      text-align: center;
@@ -45,12 +45,14 @@ body{
 }
 .text2{
     color: gray;
-    font-size: 20px;
+    font-size: 18px;
+    text-align: center;
 }
 .text3{
     color: rgb(0, 0, 0);
     font-size: 20px;
     font-weight: 500;
+    text-align: center;
 }
 #myVideo{
     width: 800px;
