--- a/css/admin.css
+++ b/css/admin.css
@@ -36,3 +36,27 @@ body{
    font-weight: 600;
    color: white;
   }
+  .add-box{
+    width: 100%;
+    height: 400px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
+  }
+  .add-container{
+    width: 95%;
+    height: 95%;
+    background-color: gray;
+    border-radius: 10px;
+    background-image: url(/data/add2.png);
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    overflow: hidden;
+  }
+  .add{
+    width: 100%;
+    height: 100%;
+    background-color: rgba(255, 255, 255, 0.111);
+  }
