--- a/css/admin.css
+++ b/css/admin.css
@@ -5,7 +5,9 @@
     box-sizing: border-box;
 }
 body{
-    background-color: black;
+  width: 100%;
+  height: auto;
+  background-color: black;
 }
 .navbar{
     width: 100%;
