--- a/css/admin.css
+++ b/css/admin.css
@@ -49,16 +49,46 @@ body{
   .add-container{
     width: 95%;
     height: 95%;
-    background-color: gray;
     border-radius: 10px;
     background-image: url(/data/add2.png);
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
     overflow: hidden;
+    display: flex;
+    flex-direction: column;
   }
-  .add{
+  .add-text1{
     width: 100%;
-    height: 100%;
-    background-color: rgba(255, 255, 255, 0.111);
+    height: 60%;
+    background-color: rgba(128, 128, 128, 0.368);
+    display: flex;
+    justify-content: right;
+    align-items: center;
+    font-size: 35px;
+    padding: 0px 20px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+
+
+  }
+  .add-text2{
+    width: 100%;
+    height: 40%;
+    display: flex;
+    justify-content: right;
+    align-items: center;
+    padding: 0px 10px;
+
+  }
+ .text2-btn{
+width: 200px;
+height: 60px;
+background-color: black;
+border-radius: 30px;
+color: white;
+display: flex;
+justify-content: center;
+align-items: center;
+font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+font-size: 20px;
   }
