--- a/css/admin.css
+++ b/css/admin.css
@@ -50,8 +50,10 @@ body{
     width: 95%;
     height: 95%;
     border-radius: 10px;
-    background-image: url(/data/add2.png);
-    background-size: cover;
+    background-color: white;
+    /* background-image: url(/data/add2.png); */
+    background-image: url(/data/admin.gif);
+    background-size: contain;
     background-position: center;
     background-repeat: no-repeat;
     overflow: hidden;
@@ -61,12 +63,13 @@ body{
   .add-text1{
     width: 100%;
     height: 60%;
-    background-color: rgba(128, 128, 128, 0.368);
+    /* background-color: rgba(128, 128, 128, 0.368); */
     display: flex;
     justify-content: right;
-    align-items: center;
+    align-items: start;
     font-size: 35px;
-    padding: 0px 20px;
+    padding: 20px 20px;
+    overflow: hidden;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 
 
@@ -76,8 +79,8 @@ body{
     height: 40%;
     display: flex;
     justify-content: right;
-    align-items: center;
-    padding: 0px 10px;
+    align-items: end;
+    padding: 20px 20px;
 
   }
  .text2-btn{
