--- a/css/admin.css
+++ b/css/admin.css
@@ -1,97 +1,295 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap');
-*{
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap");
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
 }
-body{
+body {
   width: 100%;
   height: auto;
+  padding-bottom: 20px;
   background-color: black;
 }
-.navbar{
-    width: 100%;
-    height: 100px;
-    display: flex;
-    justify-content: start;
-    align-items: center;
-  }
-  #backicon{
-    width: 20%;
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 30px;
-  }
-  a{
-    color: rgb(255, 255, 255);
-  }
-  .navbar-text{
-    width:60%;
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 20px;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-   font-weight: 600;
-   color: white;
-  }
-  .add-box{
-    width: 100%;
-    height: 400px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    
-  }
-  .add-container{
-    width: 95%;
-    height: 95%;
-    border-radius: 10px;
-    background-color: white;
-    /* background-image: url(/data/add2.png); */
-    background-image: url(/data/admin.gif);
-    background-size: contain;
-    background-position: center;
-    background-repeat: no-repeat;
-    overflow: hidden;
-    display: flex;
-    flex-direction: column;
-  }
-  .add-text1{
-    width: 100%;
-    height: 60%;
-    /* background-color: rgba(128, 128, 128, 0.368); */
-    display: flex;
-    justify-content: right;
-    align-items: start;
-    font-size: 30px;
-    padding: 20px 20px;
-    overflow: hidden;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+/* <!------------- navbar section-------- --> */
+.navbar {
+  width: 100%;
+  height: 100px;
+  display: flex;
+  justify-content: start;
+  align-items: center;
+}
+#backicon {
+  width: 20%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 30px;
+}
+a {
+  color: rgb(255, 255, 255);
+}
+.navbar-text {
+  width: 60%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 20px;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  font-weight: 600;
+  color: white;
+}
+
+/* <!------------- admine deshbord section-------- --> */
+.add-box {
+  width: 100%;
+  height: 400px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.add-container {
+  width: 94%;
+  height: 95%;
+  border-radius: 20px;
+  background-color: white;
+  /* background-image: url(/data/add2.png); */
+  background-image: url(/data/admin.gif);
+  background-size: contain;
+  background-position: center;
+  background-repeat: no-repeat;
+  overflow: hidden;
+  display: flex;
+  flex-direction: column;
+}
+.add-text1 {
+  width: 100%;
+  height: 60%;
+  /* background-color: rgba(128, 128, 128, 0.368); */
+  display: flex;
+  justify-content: right;
+  align-items: start;
+  font-size: 30px;
+  padding: 20px 20px;
+  overflow: hidden;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+}
+.add-text2 {
+  width: 100%;
+  height: 40%;
+  display: flex;
+  justify-content: right;
+  align-items: end;
+  padding: 20px 20px;
+}
+.text2-btn {
+  width: 170px;
+  height: 60px;
+  background-color: black;
+  border-radius: 30px;
+  color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  font-size: 18px;
+}
+
+/* admin-menu-box-container */
+
+.admin-menu-box-container {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 15px;
+  margin-top: 10px;
+}
+.admin-menu-box {
+  width: 95%;
+  height: 100px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 15px;
+}
+.class-menu {
+  width: 60%;
+  height: 100%;
+  background-color: rgb(60, 148, 84);
+  border-radius: 35px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: white;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  font-size: 30px;
+  overflow: hidden;
+}
+.class-menu-icon {
+  width: 35%;
+  height: 100%;
+  background-color: white;
+  border-radius: 30px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.attendance-menu {
+  width: 60%;
+  height: 100%;
+  background-color: rgba(208, 34, 50);
+  border-radius: 35px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: white;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  font-size: 25px;
+  overflow: hidden;
+}
+.attendance-menu-icon {
+  width: 35%;
+  height: 100%;
+  background-color: white;
+  border-radius: 30px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.mark-menu {
+  width: 60%;
+  height: 100%;
+  background-color: rgba(252, 178, 48);
+  border-radius: 35px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: white;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  font-size: 30px;
+  overflow: hidden;
+}
+.mark-menu-icon {
+  width: 35%;
+  height: 100%;
+  background-color: white;
+  border-radius: 30px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+/* <!------------- admine class state section-------- --> */
+.class-state-container {
+  width: 100%;
+  height: 250px;
+  margin-top: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.class-state-box {
+  width: 96%;
+  height: 95%;
+  background-color: rgb(255, 255, 255);
+  border-radius: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  overflow: hidden;
+}
+.class-state-text{
+  width: 100%;
+  height: 20%;
+}
+.class-state-option-box{
+  width: 100%;
+  height: 80%;
+
+}
+.class-state-text{
+  padding: 10px 20px;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+color: gray;
+}
+#stateForm{
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: start;
+  flex-direction: column;
+  padding: 0px 5px;
+}
+.menu-section{
+  width: 100%;
+  height: 70%;
+  display: flex;
+  justify-content: center;
+  align-items: start;
+  gap: 5px;
+  
+}
+
+.state-menu-box{
+  
+  width: 120px;
+  height: 130px;
+  border: 2px solid black;
+  border-radius: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  overflow: hidden;
+}
+.ratio-box{
+  width: 100%;
+  height: 20%;
+  padding: 0px 5px;
+}
+.class-state-animation{
+  width:100%;
+  height: 70%;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+#classGIF{
+  background-image: url(/data/class-day.gif);
+}
+#examGIF{
+  background-image: url(/data/examsday.gif);
+}
+#holidayGIF{
+  background-image: url(/data/holi-day.gif);
+}
+.class-state-name{
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+font-size: 12px;
+padding: 2px;
+color: gray;
+}
 
 
-  }
-  .add-text2{
-    width: 100%;
-    height: 40%;
-    display: flex;
-    justify-content: right;
-    align-items: end;
-    padding: 20px 20px;
+.btn-section{
+  width: 100%;
+  height: 30%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+#btn{
+  padding: 5px 10px;
+  background-color: white;
+  font-size: 13px;
+  border: 1px solid black;
+border-radius:7px;
+font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 
-  }
- .text2-btn{
-width: 170px;
-height: 60px;
-background-color: black;
-border-radius: 30px;
-color: white;
-display: flex;
-justify-content: center;
-align-items: center;
-font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-font-size: 18px;
-  }
+}
