--- a/css/schedual.css
+++ b/css/schedual.css
@@ -7,6 +7,10 @@
     flex-direction: column;
     gap: 10px;
 }
+#weekDay{
+    display: none;
+    background-color: transparent;
+}
 
 .class-box-container{
     width: 99%;
