--- a/css/admin.css
+++ b/css/admin.css
@@ -293,3 +293,9 @@ border-radius:7px;
 font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 
 }
+@media screen and
+ (min-width: 500px) {
+  body {
+display: none;
+  }
+}
