--- a/css/main.css
+++ b/css/main.css
@@ -172,6 +172,7 @@ border-radius: 25px;
 #box2{background-color: rgba(163, 221, 255, 0.718)}
 #box3{background-color: rgba(247, 168, 111, 0.78)}
 #box4{background-color: rgb(209, 158, 254)}
+#box5{background-color: rgb(106, 85, 245)}
 
 /* <!--  features link   container-box --> */
 .menu-container{
