--- a/css/schedual.css
+++ b/css/schedual.css
@@ -1,3 +1,44 @@
+
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap');
+*{
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
+body{
+    background-color: black;
+}
+.schedual-text-box{
+    width: 100%;
+    padding: 20px;
+
+}
+.schedual-text{
+    font-size: 30px;
+    color: #ffffff;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+
+}
+
+.schedual-text2{
+margin-top: 10px;
+    font-size: 18px;
+    color: gray;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+
+}
+#day-name{
+    color:rgb(95, 182, 99);
+    font-size: 20px;
+}
+
+.liveClass-box-container{
+    width: 100%;
+    height: 500px;
+    background-color: rgb(154, 154, 154);
+}
+
+
 #schedulecontainer{
     padding-bottom: 20px;
     width: 100%;
@@ -8,7 +49,6 @@
     gap: 10px;
 }
 #weekDay{
-    display: none;
     background-color: transparent;
 }
 
@@ -116,56 +156,4 @@
     /* margin-top: 20px; */
     font-size: 15px;
     color: rgb(255, 255, 255);
-}
-/* .<!--------------------------no classes---------------------------------------> */
-.no-class-container{
-    width: 100%;
-    height: 400px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding-bottom: 20px;
-    
-    display: none;
-}
-.no-class{
-    width: 90%;
-    height: 90%;
-    background-color: rgb(255, 255, 255);
-    border-radius: 20px;
-    overflow: hidden;
-}
-.no-class-video{
-    width: 100%;
-    height: 70%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-     overflow: hidden;
-}
-.no-class-text-box{
-    width: 100%;
-    height: 30%;
-    display: flex;
-    justify-content: start;
-    align-items: center;
-    flex-direction: column;
-    gap: 10px;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    padding: 0px 60px;
-
-
-}
-.no-class-text1{
-    font-size: 25px;
-}
-.no-class-text2{
-    font-size: 10px;
-    color: gray;
-}
-.week-day{
-    flex-direction: column;
-        width: 100%;
-        height: 100%;
-
 }
