--- a/css/main.css
+++ b/css/main.css
@@ -270,7 +270,7 @@ margin-top: 10px;
     display: flex;
     justify-content: end;
     align-items: end;
-    padding: 5px 10px ;
+    padding: 10px ;
     background-image: url(/data/liveclass.gif);
     background-repeat: no-repeat;
     background-size:contain;
