--- a/css/main.css
+++ b/css/main.css
@@ -251,6 +251,7 @@ margin-top: 10px;
     display: flex;
     justify-content: center;
     align-items: center;
+    margin-bottom: 20px;
 }
 .liveClass-box{
     width: 90%;
