--- a/css/schedual.css
+++ b/css/schedual.css
@@ -5,6 +5,9 @@
     margin: 0;
     box-sizing: border-box;
 }
+a{
+    color: white;
+}
 body{
     background-color: black;
 }
@@ -156,4 +159,10 @@ margin-top: 10px;
     /* margin-top: 20px; */
     font-size: 15px;
     color: rgb(255, 255, 255);
+}
+.week-day{
+    flex-direction: column;
+        width: 100%;
+        height: 100%;
+
 }
