--- a/css/animation.css
+++ b/css/animation.css
@@ -122,7 +122,7 @@
 }
 
 .option {
-    background-color: #fff;
+    background-color: #c0c0c0;
     padding: 10px 20px;
     border-radius: 5px;
     box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
@@ -148,4 +148,11 @@
 
 .circle-button.expand .options {
     display: flex;
+}
+
+
+
+/* active bar */
+#b1 , #c1{
+  background-color: white;
 }
