--- a/css/timetbl.css
+++ b/css/timetbl.css
@@ -68,20 +68,24 @@ font-size: 80%;
 .secA1{
   width: 100%;
   height: 500px;
+  margin-top: 20px;
+  padding: 2px;
   /* background-color: aqua; */
   /* overflow: hidden; */
+}
+.secA1name{
+  text-align: center;
 }
 
 table {
     width: 90%;
     border-collapse: collapse;
-    margin-top: 20px;
 overflow: hidden;
 }
 th, td {
     border: 1px solid #000;
     padding: 0.5px;
-    font-size: 50%;
+    font-size: 40%;
 }
 th {
     background-color: #f2f2f2;
