--- a/css/timetbl.css
+++ b/css/timetbl.css
@@ -9,8 +9,13 @@ margin-top: 10px;
 width: 100%;
 height: 10%;
 display: flex;
+border-bottom: 1px black solid;
 justify-content: center;
 align-items: center;
+position: fixed;
+top: 0px;
+background-color: white;
+z-index: 99;
 }
 #backicon{
 width: 20%;
@@ -40,7 +45,7 @@ width: 100%;
 display: flex;
 justify-content: center;
 align-items: center;
-margin-top: 20px;
+margin-top: 90px;
 border: 1px solid rgb(112, 105, 105);
 
 
