--- a/css/timetbl.css
+++ b/css/timetbl.css
@@ -88,6 +88,7 @@ th, td {
     border: 1px solid #000;
     padding: 0.5px;
     font-size: 40%;
+  text-align: center;
 }
 th {
     background-color: #f2f2f2;
