--- a/css/main.css
+++ b/css/main.css
@@ -269,7 +269,7 @@ margin-top: 10px;
     width: 100%;
     height: 80%;
     display: flex;
-    justify-content: end;
+    justify-content: space-between;
     align-items: end;
     padding: 10px ;
     background-image: url(/data/liveclass.gif);
